--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.10",
